# ParallelSearchExperiment

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.h  data_structure.h  dense_parallel.cpp  dense_parallel.h  main.cpp  utils.cpp  utils.h
